# dyadic-analyzer

./: QUICKSTART_UV.md  README.md  UV_CHEATSHEET.md  UV_SETUP_SUMMARY.md  docker-compose.yml
backend/: .env.example  .gitignore  .uvrc.toml  Dockerfile  pyproject.toml  uv_workflow.bat  uv_workflow.sh
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/cv/: depth_estimation.py  face_detection.py  gaze_estimation.py  person_detection.py  pipeline.py  pose_estimation.py
backend/app/evaluation/: metrics.py
backend/app/features/: scoring.py
backend/app/improvement/: weight_tuner.py
backend/app/llm/: interpreter.py
backend/app/models/: database.py  schemas.py
backend/app/tts/: voice_sim.py
backend/dyadic_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnnotationForm.tsx  AudioPlayer.tsx  Disclaimer.tsx  ImageOverlay.tsx  ImageUpload.tsx  InteractionVisualization.tsx  ResultDashboard.tsx
frontend/src/utils/: api.ts
