[project]
name = "dyadic-analyzer"
version = "1.0.0"
description = "Dyadic Visual Social Signal Analyzer - Perceived interaction signal analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "opencv-python-headless==4.10.0.84",
    "mediapipe==0.10.21",
    "numpy==1.26.4",
    "scipy==1.15.1",
    "scikit-learn==1.6.1",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "timm==1.0.14",
    "openai==1.59.5",
    "httpx==0.28.1",
    "pillow==11.1.0",
    "ultralytics>=8.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
